k8s/lab-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-lab-app
spec:
  selector:
    app: k8s-lab-app
  ports:
    - port: 80
      targetPort: 8000
